# prompt-toolkit-action-completer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: build-package.yml  lint-package.yml  test-package.yml
changes/: 3.bugfix  4.feature  5.bugfix  initial.misc  moving-get-best-choice.misc  test-suite.misc
docs/: requirements.txt
docs/source/: action_completer.rst  conf.py  getting-started.rst  index.rst  license.rst
docs/source/_static/assets/examples/: 000-simple-hello-completion.py  001-simple-hello-completion.py  002-simple-hello-completion.py  004-cat-path-validation.py  005-advanced-touch-validation.py  005-nested-action-group.py  006-capture-all-action.py  007-color-completions.py  008-dynamic-color-completions.py  009-display-completions.py  010-display-formattedtext-completions.py  011-display-meta-completions.py  012-conditional-actions.py  013-custom-action-execution.py  014-display-completion-interpolation.py
src/action_completer/: __init__.py  completer.py  types.py  utils.py  validator.py
tasks/: __init__.py  docs.py  linter.py  package.py  utils.py
tests/: __init__.py  strategies.py  test_completer.py  test_pytest.py  test_types.py  test_utils.py  test_validator.py
